--- a/Chapter 1 - The Essentials.ipynb
+++ b/Chapter 1 - The Essentials.ipynb
@@ -853,8 +853,8 @@
     "3. Find the list of escape sequences in [Section 2.4](https://docs.python.org/3/reference/lexical_analysis.html#literals).  create a string that uses at least 4 different escape sequences.\n",
     "4. Add an _integer_ and a _float_ together. Is the final number an _integer_ or a _float_?\n",
     "5. Add 2 ** 1024 + 1.5. What is the outcome? Why? hint: Try adding .5, 1, and  1.1 instead of 1.5.\n",
-    "6. import the string library with the script **_import_** _string_. Print  **_string.\\_\\_dict\\_\\__** . What is the output? If you do not understand the meaning,  search _\"python class \\_\\_dict\\_\\_\"_ online and find an explanation.\n",
-    "7. Call at least 5 of the results from **_string.\\_\\_dict\\_\\__**.\n",
+    "6. import the string library with the script **_import_** _string_. Print  **string.\\__\\__dict\\__\\__** . What is the output? If you do not understand the meaning,  search \"python class \\__\\__dict\\__\\__\" online and find an explanation.\n",
+    "7. Call at least 5 of the results from **_string.\\__\\__dict\\__\\__**.\n",
     "8. Concatenate 3 distinct strings\n"
    ]
   }
@@ -875,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
