--- a/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -2560,7 +2560,7 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": true,
-    "hideCode": true,
+    "hideCode": false,
     "hidePrompt": false,
     "hide_input": true
    },
