First COVID19 Blog Post Complete

--- a/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -3960,7 +3960,7 @@
     "        f_test_label = \"\"  \n",
     "        for key in unrestr_var_names:  \n",
     "            if key not in restr_var_names:  \n",
-    "                f_test_label = \"H0: \" + f_test_label + str(key) + \" != \"  \n",
+    "                 f_test_label = f_test_label + str(key) + \" != \"  \n",
     "        f_test_label = f_test_label + \"0\"  \n",
     "        res_dict = {\"f-stat\":[f_stat],  \n",
     "                    \"p-value\":[f_crit_val],  \n",
