--- a/Textbook/Chapter 1 - The Essentials.ipynb
+++ b/Textbook/Chapter 1 - The Essentials.ipynb
@@ -15,6 +15,8 @@
     "| **_print()_** | A function that prints in the console objects passed to it |\n",
     "| Running Script | Script must be executed. In Spyder, this can be accomplished by pressing F5 |\n",
     "\n",
+    "### Hello World!\n",
+    "\n",
     "Python offers a wide variety of tools to be used by a program. The first of these that we will learn is the print() method. Printing is a feature that you will continually use while you program. It is also useful for creating markers in your code when you are not sure what is wrong. You can print plain text. Using Spyder, we will create a file called helloWorld.py."
    ]
   },
@@ -875,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
