--- a/Textbook/Introduction.ipynb
+++ b/Textbook/Introduction.ipynb
@@ -6,10 +6,15 @@
    "source": [
     "# Learn Python for Economic Computation: A Crash Course\n",
     "\n",
-    ">James Caton\n",
-    ">\n",
-    ">Cameron Harwick\n",
+    "https://github.com/jlcatonjr/Learn-Python-for-Stats-and-Econ\n",
     "\n",
+    "> James Caton\n",
+    ">\n",
+    "> james.caton@ndsu.edu\n",
+    ">\n",
+    "> Cameron Harwick\n",
+    ">\n",
+    "> charwick@brockport.edu\n",
     "\n",
     "### Table of Contents\n",
     "\n",
@@ -82,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
