--- a/Textbook/Chapter 3 - Building Functions.ipynb
+++ b/Textbook/Chapter 3 - Building Functions.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "def function_name(object1, object2, objectn):\n",
+    "def function_name(object1, object2, . . ., objectn):\n",
     "    <operations>"
    ]
   },
@@ -790,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
