Update In Class Projects, Add Project 5 - Fed Data

--- a/In Class Projects/Project 1 - My First Jupyter Project.ipynb
+++ b/In Class Projects/Project 1 - My First Jupyter Project.ipynb
@@ -16,6 +16,8 @@
     "\n",
     "The goal of our first lesson is to get acquainted with Jupyter notebooks. Jupyter notebooks are ideal for building a portfolio that you can save on GitHub or as an html file that can be integrated into a personal website. Plan to showcase your work to impress interested employers. \n",
     "\n",
+    "You will need to learn to work with Jupyter. Whenever you work on a project, it will be useful to keep open a list of [keyboard shortcuts](https://cheatography.com/weidadeyue/cheat-sheets/jupyter-notebook/) and a [list of useful commands](https://medium.com/ibm-data-science-experience/markdown-for-jupyter-notebooks-cheatsheet-386c05aeebed) for altering text and creating useful structures (i.e, lists, hyperlinks, etc..) in markdown mode.\n",
+    "\n",
     "All projects will need to be created using Jupyter notebooks. \n",
     "\n",
     "## The plan for the course\n",
@@ -24,7 +26,7 @@
     "\n",
     "To get started, you will need to follow the instructions in the [Introduction](https://github.com/jlcatonjr/Learn-Python-for-Stats-and-Econ/blob/master/Textbook/Introduction.ipynb) to [download and install](https://www.anaconda.com/products/individual#download-section) Anaconda. If at all possible, you are encouraged to work using your own system so that you can participate online in the case that you are unable to attend lecture in person. Managing course material will be much easier if you consistently use the same machine and/or use a thumb drive to organize material.\n",
     "\n",
-    "In class, development of material will occur organically. Every class we will build projects in Jupyter notebooks. Each in class project will start with an initial outline, with much of the work being developed live in class. \n",
+    "In class, development of material will occur organically. Every class we will build projects in Jupyter notebooks. Each in class project will start with an initial outline, with much of the work being developed live in class. Projects covered in the early stages of the course will often include material not yet covered in the text. This is for your benefit as you will often have to approach unfamiliar material when developing your own projects. This wil allow us to approach the most useful content from the very beginning of the course. I will walk you step by step through these in class projects. \n",
     "\n",
     "*To the extent possible, every project will be taught as part of a creative process that will likely involve a search for solutions to problems as they arise. While I will always have an idea about how to approach a problem, I have no intention of pretending that I can recite solutions to these projects outside of a creative process.*\n",
     "\n",
