--- a/In Class Projects/Projects 3-4 - Building Functions and Visualizing Distribution (Complete).ipynb
+++ b/In Class Projects/Projects 3-4 - Building Functions and Visualizing Distribution (Complete).ipynb
@@ -1336,7 +1336,13 @@
     "\n",
     "## Homework\n",
     "\n",
-    "Choose 3 to 4 stocks of your choice and run through create a notebook with the same visualizations. "
+    "*For ECON 411*\n",
+    "\n",
+    "1. Choose 4 stocks of your choice and  create a notebook with the same visualizations. Provide similar explanations in regard to the meaning of statistics and the shape of each stocks distribution.\n",
+    "\n",
+    "*For Econ 611*\n",
+    "\n",
+    "1. Choose 9 stocks of your choice and  create a notebook with the same visualizations. Provide similar explanations in regard to the meaning of statistics and the shape of each stocks distribution..\n"
    ]
   }
  ],
