--- a/In Class Projects/Project 1 - My First Jupyter Project.ipynb
+++ b/In Class Projects/Project 1 - My First Jupyter Project.ipynb
@@ -476,7 +476,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "df = pd.DataFrame(dct)\n",
     "df"
    ]
@@ -485,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great work! Now that we have an idea of how dictionaries are structured, create dictionary of the following structure with the specified information for each profess at the department website. I will get you started with the first few entries. Choose 5 more to complete."
+    "Great work! Now that we have an idea of how dictionaries are structured, create dictionary of the following structure with the specified information for each profess at the department website. I will get you started with the first few entries. **Choose 5 more to complete.**"
    ]
   },
   {
@@ -549,7 +548,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "faculty_dict =  {\"William Nganje\":{\"Website\":\"https://www.ndsu.edu/agecon/faculty/william_nganje/#c622350\", \n",
     "                                     \"Areas of Specialization\":\"Risk management; financial analysis; economics of obesity, food safety and food terrorism; experimental economics; and consumer choice theory\",\n",
     "                                     \"Bio\":\"NA\"},\n",
@@ -645,8 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *pandas*\n",
-    "Next we will import the pandas library and transform the dictionary into a DataFrame. Then we will save the dataframe as a csv."
+    "Next we will transform the dictionary into a DataFrame. Then we will save the dataframe as a csv."
    ]
   },
   {
@@ -836,7 +833,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "faculty_df = pd.DataFrame(faculty_dict)\n",
     "# to save a dictionary as a dataframe, pass the dictionary to pd.DataFrame()\n",
     "faculty_df.to_csv(\"NDSUAAEFacultyInfo.csv\")\n",
