--- a/In Class Projects/Project 2 - For Loops and Interest Rates.ipynb
+++ b/In Class Projects/Project 2 - For Loops and Interest Rates.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use a for loop to create a list of number. Using the same for loops we created above, let's create lists of numbers."
+    "We can use a for loop to create a list of number. Using the same for loops we created above, let's create lists of numbers. In some examples we will use _lst.append()_, which adds an element to the en of the list, and *lst.insert(obj, index)*, to add a new value to the list. (The equivalent of *lst.append(obj)* is *lst.insert(obj, -1))*."
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "Now let's use a for loop to calculate the future value of the 1000 dollar deposit after 1 year given an interest rate of 10% and compounding over n periods within the year. Test for semi-annual, quarterly, monthly, weekly, and daily compounding.\n",
     "\n",
-    "$FV = PV(1+\\frac{r}{n})^tn$"
+    "$FV = PV(1+\\frac{r}{n})^{tn}$"
    ]
   },
   {
@@ -981,7 +981,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But suppose we wanted to create a program where the computer solves this task itself. There are surely many ways to accomplish this. Let's train the computer to solve this problem. Let's solve for ax = 15 where a = 3."
+    "But suppose we wanted to create a program where the computer solves this task itself. There are surely many ways to accomplish this. Let's train the computer to solve this problem. Let's solve for \n",
+    "\n",
+    "$ax = 15$ where $a = 3$."
    ]
   },
   {
@@ -1021,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1394,13 +1396,7 @@
       "x = 333.33333200000004 \tax= 999.9999960000001\n",
       "x = 333.33333300000004 \tax= 999.9999990000001\n",
       "x = 333.33333400000004 \tax= 1000.0000020000001\n",
-      "x = 333.3333339 \tax= 1000.0000017\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "x = 333.3333339 \tax= 1000.0000017\n",
       "x = 333.3333338 \tax= 1000.0000014\n",
       "x = 333.33333369999997 \tax= 1000.0000011\n",
       "x = 333.33333359999995 \tax= 1000.0000007999998\n",
@@ -1464,7 +1460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use brute force to solve for the interest rate you would need to grow 1000 to 1500 after 2 years of annual compounding?"
+    "## Use brute force to solve for the interest rate you would need to grow 1000 to 1500 after 2 years of annual compounding?"
    ]
   },
   {
@@ -1525,7 +1521,6 @@
     }
    ],
    "source": [
-    "\n",
     "PV = 1000\n",
     "FV = 1000\n",
     "r = .01\n",
@@ -1619,7 +1614,7 @@
    "source": [
     "Great work! You've combined several fundamental concepts from computing and finance in a single lesson. \n",
     "\n",
-    "# Homework\n",
+    "### Homework\n",
     "\n",
     "Create a Jupyter notebook that explains the rule of 70 (or 72 if you prefer). Compare the rule of 70 to analytical and computational solutions.\n",
     "\n",
@@ -1639,7 +1634,10 @@
     "\n",
     "2. In a dictionary, save the length of time required to double the value of an investment for each interest rate. The structure of your dictionary should be as follows: use \"Time to double\" as a key in the first layer of the dictionary. This should point to another dictionary that indicates the number of periods  required to double the value of an investment for each interest rate. The first layer of keys will also include \"Rule of 70\" (or \"... of 72\") and \"Computational Solution\", each of which point to another dictionary where the approximated solutions will be saved. Save the completed dictionary as a dataframe (import pandas; and pass the dictionary to a DataFrame). Save this dataframe as a csv.\n",
     "\n",
-    "e.g., dct = {\"Time to double\": {i: np.log(2) / np.log(1+r) for r in range(0,10.5,0.5)}, \"Rule of 70\":{. . .}, \"Computational Solution\": {. . .}}\n"
+    "e.g., dct = {\"Time to double\": {i: np.log(2) / np.log(1+r) for r in range(0,10.5,0.5)}, \"Rule of 70\":{. . .}, \"Computational Solution\": {. . .}}\n",
+    "\n",
+    "### Graduate Homework\n",
+    "3. Use for loops to create a list of prime numbers from 2 to 1000."
    ]
   }
  ],
