--- a/In Class Projects/Project 2 - For Loops and Interest Rates.ipynb
+++ b/In Class Projects/Project 2 - For Loops and Interest Rates.ipynb
@@ -1618,26 +1618,71 @@
     "\n",
     "Create a Jupyter notebook that explains the rule of 70 (or 72 if you prefer). Compare the rule of 70 to analytical and computational solutions.\n",
     "\n",
-    "1. For all interest rates from 0.5% to 10%, at intervals of 0.5%, calculate the length of time required for an investment to double in value for each interest rate. *Recall that for an investment that has doubled in size*: \n",
+    "> 1.For all interest rates from 1% to 10%, at intervals of 1%, calculate the length of time required for an investment to double in value for each interest rate. *Recall that for an investment that has doubled in size*: \n",
+    ">\n",
+    ">>$\\frac{FV}{PV} = 2$\n",
+    ">>\n",
+    ">>$2 = (1+r)^t$\n",
+    ">>\n",
+    ">>$ln(2) = tln(1+r)$\n",
+    ">>\n",
+    ">>$t = \\frac{ln(2)}{ln(1+r)}$\n",
+    ">\n",
+    ">Use the above solution to solve for $t$ for each $r$. Print the solution in a table by using \"\\n\" and \"\\t\" in the >print function when appropriate.\n",
+    ">\n",
+    ">\\*Your script *must* use a for loop or for loops to find the solutions.\n",
     "\n",
-    "$\\frac{FV}{PV} = 2$\n",
+    ">2.In a dictionary, save the length of time required to double the value of an investment for each interest rate. The structure of your dictionary should be as follows: use \"Time to double\" as a key in the first layer of the dictionary. This should point to another dictionary that indicates the number of periods  required to double the value of an investment for each interest rate. The first layer of keys will also include \"Rule of 70\" (or \"... of 72\") and \"Computational Solution\", each of which point to another dictionary where the approximated solutions will be saved. \n",
+    ">\n",
+    "> Use the following to start. Solve the problem computationally, then ave the completed dictionary as a dataframe (import pandas; and pass the dictionary to a DataFrame). Save this dataframe as a csv.\n",
+    ">\n",
+    ">dct = {\"Time to double\": {r: np.log(2) / np.log(1+r/100) for r in range(1,11,1)}, \"Rule of 70\":{r:70 / r for r in range(1,11)}, \"Computational Solution\": {}}\n",
     "\n",
-    "$2 = (1+r)^t$\n",
-    "\n",
-    "$ln(2) = tln(1+r)$\n",
-    "\n",
-    "$t = \\frac{ln(2)}{ln(1+r)}$\n",
-    "\n",
-    "Use the above solution to solve for $t$ for each $r$. Print the solution in a table by using \"\\n\" and \"\\t\" in the print function when appropriate.\n",
-    "\n",
-    "\\*Your script *must* use a for loop or for loops to find the solutions.\n",
-    "\n",
-    "2. In a dictionary, save the length of time required to double the value of an investment for each interest rate. The structure of your dictionary should be as follows: use \"Time to double\" as a key in the first layer of the dictionary. This should point to another dictionary that indicates the number of periods  required to double the value of an investment for each interest rate. The first layer of keys will also include \"Rule of 70\" (or \"... of 72\") and \"Computational Solution\", each of which point to another dictionary where the approximated solutions will be saved. Save the completed dictionary as a dataframe (import pandas; and pass the dictionary to a DataFrame). Save this dataframe as a csv.\n",
-    "\n",
-    "e.g., dct = {\"Time to double\": {i: np.log(2) / np.log(1+r) for r in range(0,10.5,0.5)}, \"Rule of 70\":{. . .}, \"Computational Solution\": {. . .}}\n",
     "\n",
     "### Graduate Homework\n",
-    "3. Use for loops to create a list of prime numbers from 2 to 1000."
+    ">3.Use for loops to create a list of prime numbers between 2 and 1000."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Time to double': {1: 69.66071689357483,\n",
+       "  2: 35.0027887811465,\n",
+       "  3: 23.449772250437736,\n",
+       "  4: 17.672987685129698,\n",
+       "  5: 14.206699082890463,\n",
+       "  6: 11.895661045941875,\n",
+       "  7: 10.244768351058712,\n",
+       "  8: 9.006468342000588,\n",
+       "  9: 8.043231726932046,\n",
+       "  10: 7.272540897341713},\n",
+       " 'Rule of 70': {1: 70.0,\n",
+       "  2: 35.0,\n",
+       "  3: 23.333333333333332,\n",
+       "  4: 17.5,\n",
+       "  5: 14.0,\n",
+       "  6: 11.666666666666666,\n",
+       "  7: 10.0,\n",
+       "  8: 8.75,\n",
+       "  9: 7.777777777777778,\n",
+       "  10: 7.0},\n",
+       " 'Computational Solution': {}}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "dct = {\"Time to double\": {r: np.log(2) / np.log(1+r/100) for r in range(1,11,1)}, \"Rule of 70\":{r:70 / r for r in range(1,11)}, \"Computational Solution\": {}}\n",
+    "dct"
    ]
   }
  ],
