Update COVID19 Visualization, add Fed Project, hover annotation

--- a/In Class Projects/Project 1 - My First Jupyter Project.ipynb
+++ b/In Class Projects/Project 1 - My First Jupyter Project.ipynb
@@ -845,7 +845,7 @@
    "source": [
     "## Homework \n",
     "\n",
-    "1. Create a dictionary that identifies your name, major(s)/minor(s), motivation for taking the course, and plans for after you graduate from NDSU. Transform this into a datframe. Print the dataframe and save the datframe as a csv.\n",
+    "1. Create a dictionary that identifies your name, major(s)/minor(s), motivation for taking the course, and plans for after you graduate from NDSU. Transform this into a dataframe. Print the dataframe and save the datframe as a csv.\n",
     "\n",
     "2. Create a dictionary with the same structure as the dictionary we created in the in class project for 10 professionals or specialists that you admire. The dictionary should include keys that identify the name of the professional, their area of expertise, a short biography, and a link to their website (or social media profile if no website is available). Print the dataframe and save this dataframe as a csv."
    ]
