--- a/In Class Projects/Project 2 - For Loops and Interest Rates.ipynb
+++ b/In Class Projects/Project 2 - For Loops and Interest Rates.ipynb
@@ -17,15 +17,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lst:\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
+      "lst2:\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100]\n",
+      "lst3:\n",
+      "[100, 99, 98, 97, 96, 95, 94, 93, 92, 91, 90, 89, 88, 87, 86, 85, 84, 83, 82, 81, 80, 79, 78, 77, 76, 75, 74, 73, 72, 71, 70, 69, 68, 67, 66, 65, 64, 63, 62, 61, 60, 59, 58, 57, 56, 55, 54, 53, 52, 51, 50, 49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
+    "lst = []\n",
     "# count by ones to 100\n",
-    "\n",
+    "for i in range(101):\n",
+    "    lst.append(i)\n",
     "# count by twos to 100\n",
+    "lst2 = list(range(0,101,2))\n",
+    "# count backward from 100\n",
+    "lst3 = [i for i in range(100,-1, -1)]\n",
     "\n",
-    "# count backward to 100\n"
+    "print(\"lst:\", lst, sep = \"\\n\")\n",
+    "print(\"lst2:\", lst2, sep = \"\\n\")\n",
+    "print(\"lst3:\", lst3, sep = \"\\n\")"
    ]
   },
   {
@@ -37,19 +57,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
+      "[100, 99, 98, 97, 96, 95, 94, 93, 92, 91, 90, 89, 88, 87, 86, 85, 84, 83, 82, 81, 80, 79, 78, 77, 76, 75, 74, 73, 72, 71, 70, 69, 68, 67, 66, 65, 64, 63, 62, 61, 60, 59, 58, 57, 56, 55, 54, 53, 52, 51, 50, 49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
+    "lst = []\n",
     "# create list of numbers from 0 to 100\n",
-    "\n",
-    "# create a list of numbers counting by twos from 0 to 100\n",
-    "\n",
+    "for i in range(101):\n",
+    "    lst.insert(i, i)\n",
+    "    \n",
     "# Create a list of number that moves backwards from 100 to 0.\n",
-    "\n",
-    "# make list using list(range()), cycle through list with for loop\n",
-    "\n",
-    "# create a list using a generator function: [i for i in range(n)]\n"
+    "lst2 = []\n",
+    "for i in range(101):\n",
+    "    lst2.insert(0, i)\n",
+    "print(lst)\n",
+    "print(lst2)"
    ]
   },
   {
@@ -74,17 +105,48 @@
     "\n",
     "$r = (\\frac{FV}{PV})^{1/t}-1$\n",
     "\n",
-    "Suppose that a year after you place 1000 dollars in a deposit account, the value of the deposit grows to 1200 dollars. Build python script that calculates the annual interest rate."
+    "Suppose that two years after you place 1000 dollars in a deposit account, the value of the deposit grows to 1200 dollars. Build python script that calculates the annual interest rate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09544511501033215"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# define variables and calculate interest rate\n",
-    "\n"
+    "r = (1200 / 1000) ** (1/2) - 1\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1199.9999999999998"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1000 * (1 + r) ** 2"
    ]
   },
   {
