--- a/In Class Demonstrations/Project 1 - My First Jupyter Project.ipynb
+++ b/In Class Demonstrations/Project 1 - My First Jupyter Project.ipynb
@@ -10,15 +10,17 @@
     "\n",
     "Create a dictionary that holds information concerning NDSU AAE Faculty\n",
     "\n",
-    "* What is a dictinary?\n",
+    "* What is a dictionary?\n",
     "\n",
     "* Where do I get this info from?\n",
     "\n",
     "## What is a dictionary?\n",
     "\n",
-    "A dictionary is a data structure that stores data objects that linked to keys. Data objects can be numbers (integers or floats), strings (\"text in quotations\"), dataframes, etc...\n",
+    "* A dictionary is a data structure that stores data objects that linked to keys. Data objects can be numbers (integers or floats), strings (\"text in quotations\"), dataframes, etc...\n",
     "\n",
-    "What are keys?: Keys are inputs that link to a particular output.\n",
+    "### What are keys? \n",
+    "\n",
+    "* Keys are inputs that link to a particular output. **This still does not make sense to me...**\n",
     "\n",
     "Dictionaries are the fundamental data structures that we will be working with in class. To create a dictionary, we use curly brackets ({}). Within the brackets, we define each entry in the dictionary with a key and the object that the key points to. Thus, the dictionary takes the form:\n",
     "\n",
