--- a/Textbook/Chapter 2 - Working With Lists.ipynb
+++ b/Textbook/Chapter 2 - Working With Lists.ipynb
@@ -97,44 +97,7 @@
    "source": [
     "We have joined the lists together to make one long list. We can already observe one way in which Python will be useful for helping us to organize data. If we were doing this in a spread sheet, we would have to identify the row and column values of the elements or copy and paste the desired values into new rows or enter formulas into cells. Python accomplishes this for us with much less work.\n",
     "\n",
-    "For a list of numbers, we will usually perform some arithmetic operation or categorize these values in order to identify meaningful subsets within the data. This requires access the elements, which Python allows us to do efficiently.\n",
-    "\n",
-    "In the next exercise we will call elements by index number from the same lists we have already made. We will use the list’s append method to make a copy of a list. The append method adds an element to the end of a list."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "list1 elements: 5 4 9 10 3\n",
-      "list2 elements: 6 3 2 1 5\n",
-      "list3 elements: [5, 4, 9, 10, 3, 5, 6, 3, 2, 1, 5, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#copyListElementsForLoop.py\n",
-    "list1 = [5, 4, 9, 10, 3, 5]\n",
-    "list2 = [6, 3, 2, 1, 5, 3]\n",
-    "\n",
-    "print(\"list1 elements:\", list1[0], list1[1], list1[2], list1[3], list1[4])\n",
-    "print(\"list2 elements:\", list2[0], list2[1], list2[2], list2[3], list2[4])\n",
-    "\n",
-    "list3 = []\n",
-    "j = len(list1)\n",
-    "for i in range(j):\n",
-    "    list3.append(list1[i])\n",
-    "\n",
-    "k = len(list2)\n",
-    "for i in range(k):\n",
-    "    list3.append(list2[i])\n",
-    "\n",
-    "print(\"list3 elements:\", list3)"
+    "For a list of numbers, we will usually perform some arithmetic operation or categorize these values in order to identify meaningful subsets within the data. This requires access the elements, which Python allows us to do efficiently."
    ]
   },
   {
@@ -242,9 +205,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Having printed _i for all i in range(0, 10, 1)_, we produce a set of integers from 0 to 9.\n",
+    "Having printed *i* for all *i in range(0, 10, 1)*, we produce a set of integers from 0 to 9.\n",
     "\n",
-    "If we were only printing index numbers from a range, for loops would not be very useful. For loops can be used to produce a wide variety of outputs. Often, you will call a for loop to cycle through the index of a particular array. Since arrays are indexed starting with 0 and for loops also assume 0 as an initial value, cycling through a list with a for loop is straight-forward. For a list named _A&nbsp;_, just use the command:"
+    "If we were only printing index numbers from a range, for loops would not be very useful. For loops can be used to produce a wide variety of outputs. Often, you will call a for loop to cycle through the index of a particular array. Since arrays are indexed starting with 0 and for loops also assume 0 as an initial value, cycling through a list with a for loop is straight-forward. For a list named *A*, just use the command:"
    ]
   },
   {
