--- a/In Class Projects/Project 1 - My First Jupyter Project.ipynb
+++ b/In Class Projects/Project 1 - My First Jupyter Project.ipynb
@@ -69,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "{'run': 'to move swiftly by foot', 'walk': 'to move slowly, leasurely by foot'}"
+       "{'run': 'to move swiftly by foot', 'walk': 'to move slowly, leisurely by foot'}"
       ]
      },
      "execution_count": 1,
@@ -79,7 +79,7 @@
    ],
    "source": [
     "dct = {\"run\": \"to move swiftly by foot\",\n",
-    "      \"walk\" : \"to move slowly, leasurely by foot\"}\n",
+    "      \"walk\" : \"to move slowly, leisurely by foot\"}\n",
     "dct"
    ]
   },
@@ -129,7 +129,7 @@
       "text/plain": [
        "{'run': {'verb': 'to move swiftly by foot',\n",
        "  'noun': 'refers to a period of time while one was running'},\n",
-       " 'walk': {'verb': 'to move slowly, leasurely by foot',\n",
+       " 'walk': {'verb': 'to move slowly, leisurely by foot',\n",
        "  'noun': 'refers to a period of time while one was walking'}}"
       ]
      },
@@ -141,7 +141,7 @@
    "source": [
     "dct = {\"run\": {\"verb\":\"to move swiftly by foot\", \n",
     "               \"noun\":\"refers to a period of time while one was running\"},\n",
-    "       \"walk\" :{\"verb\" : \"to move slowly, leasurely by foot\",\n",
+    "       \"walk\" :{\"verb\" : \"to move slowly, leisurely by foot\",\n",
     "                \"noun\": \"refers to a period of time while one was walking\"}}\n",
     "dct"
    ]
@@ -192,7 +192,7 @@
        "    <tr>\n",
        "      <th>verb</th>\n",
        "      <td>to move swiftly by foot</td>\n",
-       "      <td>to move slowly, leasurely by foot</td>\n",
+       "      <td>to move slowly, leisurely by foot</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -205,7 +205,7 @@
        "\n",
        "                                                  walk  \n",
        "noun  refers to a period of time while one was walking  \n",
-       "verb                 to move slowly, leasurely by foot  "
+       "verb                 to move slowly, leisurely by foot  "
       ]
      },
      "execution_count": 4,
